# washington-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
.metadata/: generate.proj  state.cpp  washington.cpp
.metadata/idl/: state.idl  washington.idl
.windows/winmd/: Microsoft.States.winmd
crates/samples/impl/: Cargo.toml
crates/samples/impl/src/: main.rs
crates/samples/washington/: Cargo.toml
crates/samples/washington/src/: main.rs
crates/tools/api/: Cargo.toml
crates/tools/api/src/: main.rs
csharp/: NativeMethods.txt  Program.cs  csharp.csproj
src/: bindings.rs  lib.rs
src/Microsoft/: mod.rs
src/Microsoft/States/: impl.rs  mod.rs
src/Microsoft/States/Washington/: impl.rs  mod.rs
src/Microsoft/Washington/: impl.rs  mod.rs
