[package]
name = "washington-rs"
version = "0.4.0"
authors = [""]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust for Washington SDK"
repository = ""
documentation = ""
readme = ""
exclude = [".github", ".windows", ".metadata", "docs", "tests"]

[workspace]
members = [
    "crates/samples/*",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies.windows]
version = "0.58.0"

[dependencies.windows-core]
version = "0.58.0"

[build-dependencies.windows-bindgen]
version = "0.58.0"

[patch.crates-io]
windows-bindgen = { git = "https://github.com/microsoft/windows-rs.git", rev = "b7c2cd5031ba952bc6d072d6641a9a5444ac912d"}
windows = { git = "https://github.com/microsoft/windows-rs.git", rev = "b7c2cd5031ba952bc6d072d6641a9a5444ac912d"}
windows-core = { git = "https://github.com/microsoft/windows-rs.git", rev = "b7c2cd5031ba952bc6d072d6641a9a5444ac912d"}
